# BCR-FastAPI-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  desktop_app.py  pyproject.toml  todo.txt
.history/: todo_20250625123038.txt  todo_20250625123039.txt  todo_20250625123043.txt  todo_20250625123048.txt  todo_20250625123103.txt  todo_20250625123105.txt  todo_20250625123113.txt  todo_20250625123124.txt  todo_20250625123128.txt  todo_20250625123141.txt  todo_20250625123252.txt  todo_20250625123300.txt  todo_20250625123303.txt  todo_20250625123307.txt  todo_20250625123310.txt  todo_20250625123330.txt  todo_20250625123339.txt  todo_20250625123343.txt  todo_20250625123910.txt  todo_20250625123913.txt  todo_20250625123923.txt
app/: __init__.py  database.py  dependencies.py  main.py
app/core/: __init__.py  config.py  sessions.py
app/database/annotations/: human_aa_hc.csv  human_aa_lc.csv  mouse_aa_hc.csv  mouse_aa_lc.csv
app/migrations/: add_species_column.py
app/routers/: __init__.py  analyze.py  auth.py  project_selection.py
app/schemas/: forms.py  project.py
app/services/: callbacks.py  ddl.py  file_handle.py  germline_annotation.py  plotting.py
app/services/bokeh_logo/: __init__.py  logo_generator.py
app/static/css/: input.css  msa-viewer.css  output.css
app/static/js/: charts.js  distance-matrix-canvas.js  download_data.js  (+3 more)
app/templates/: base.html  login.html
instance/: bcr.db
migrations/versions/: add_species_column.py
notebooks/: notebook.ipynb
tests/: __init__.py  conftest.py  test_sequence_consistency.py
(+129 files in other folders)
