[project]
name = "bcr-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "biopython>=1.85",
    "fastapi-tailwind>=2.0.3a1",
    "fastapi[standard]>=0.115.12",
    "itsdangerous>=2.2.0",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "sc-dandelion>=0.5.4",
    "sqlalchemy>=2.0.41",
]
